tests/grammar/schema/deprecated/illegal_arg_fail_0/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:3:31
  |
3 |     @deprecated(strict=False, "1.16")
  |                               ^ positional argument follows keyword argument
  |